# AuAgBC-SERS-sweat-analysis

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  process_raman.py  pyproject.toml  requirements-compatibility.txt  requirements-release.txt  requirements-verify.txt  requirements.txt
configs/: example_manifest.csv  reference_example.json
docs/: 4ATP_BLANK_AUDIT.md  4ATP_HIGH_POWER_REANALYSIS.md  4ATP_MEDIUM_POWER_COMPUTATIONAL_REPLAY.md  CALIBRATION_CURVE_AUDIT.md  DATA_AUDIT.md  ETHICS_APPROVAL.md  HUMAN_DATA_GOVERNANCE.md  LICENSING.md  MANIFEST_SCHEMA.md  PAPER_DATA_MAP.md  RELEASE_CHECKLIST.md
metadata/: author_confirmations.csv  curation_summary.json  dataset_manifest.csv  ethics_approval_record.csv  human_data_lineage.csv  human_data_lineage_summary.json  legacy_script_inventory.csv  proof_of_concept_code_crosswalk.csv  provenance_conflicts.csv  provenance_corrections.csv  raw_processing_manifest.csv  sanitization_report.csv  source_archives.csv  status_definitions.csv
scripts/: audit_calibration_curve.py  prepare_repository_data.py  proof_of_concept_mapping.py  replay_4atp_750_5_5_m.py  report_human_data_lineage.py  reprocess_4atp_750_5_5_h.py  reproduce_legacy_families.py  validate_legacy_reproduction.py  verify_4atp_blank_audit.py  verify_repository_data.py
tests/: test_4atp_blank_audit.py  test_calibration_curve_audit.py  test_cli.py  test_human_data_lineage.py  test_io.py  test_pipeline.py  test_prepare_repository_data.py  test_processing.py  test_proof_of_concept_mapping.py  test_replay_4atp_750_5_5_m.py  (+3 more)
(+2452 files in other folders)
