[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auagbc-sers"
version = "0.1.0"
description = "Reproducible Raman/SERS processing for the AuAgBC sweat study"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<4",
  "scipy>=1.11,<2",
  "pybaselines>=1.1,<2",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[project.scripts]
process-raman = "auagbc_sers.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
